marketing_hub/openshift/04-service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: opsora-marketing-hub
  namespace: opsora-dev
  labels:
    app: opsora-marketing-hub
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: opsora-marketing-hub
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: opsora-marketing-hub
  namespace: opsora-dev
  labels:
    app: opsora-marketing-hub
  annotations:
    haproxy.router.openshift.io/timeout: "60s"
spec:
  to:
    kind: Service
    name: opsora-marketing-hub
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
